docs for researcher dashboard added
